--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -6,74 +6,88 @@
   <form action="{{ url_for('data_handler') }}" method="post">
     <div class="row justify-content-center">
       <div class="card rounded-lg px-0 py-0 my-1">
-        <div class="card-header px-1 py-1">Personal Details
-	  <div class="float-right mr-1"><a class="unlock personal" id="toggle_personal" onclick="toggle_lock_personal()">
-	      <svg aria-hidden="true" id="personal_lock" focusable="false" data-prefix="fas" data-icon="lock" class="svg-inline--fa fa-lock fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-				<path class="path-icon" id = "path-locked-details" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
-		<path class="path-icon transparent" id="path-unlocked-details" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
-
-	      </svg>
-	    </a></div>
-	</div>
+        <div class="card-header px-1 py-1">Personal Details</div>
         <div class="card-body px-1 py-1">
           <div>
-          <span class="form-group"><label class="small" for="inputName">Name</label><input class="form-control py-1" id="inputName" type="name" value="John Smith" readOnly name='patient_name' /></span>
-          <span class="form-group"><label class="small" for="inputEmailAddress">Age</label><input class="form-control py-1" id="inputAge" type="number" readOnly placeholder=87 /></span>
-          <span class="form-group"><label class="small" for="inputHeight">Height (cm)</label><input class="form-control py-1" id="inputHeight" type="number" readOnly placeholder=180 /></span>
-          <span class="form-group"><label class="small" for="inputWeight">Weight (kg)</label><input class="form-control py-1" id="inputWeight" type="number" readOnly placeholder=80 /></span>
-          </div> 
+            <table>
+              <tr><td>
+                <table>
+              <tr><td><span class="form-group"><label class="small" for="inputName">Name</label></td><td><input class="form-control py-1" id="inputName" type="name" value="John Smith" readOnly name='patient_name' /></span></td></tr>
+              <tr><td><span class="form-group"><label class="small" for="inputEmailAddress">Age</label></td><td><input class="form-control py-1" id="inputAge" type="number" readOnly placeholder=87 /></span></td></tr>
+                </table></td>
+                <td>
+                  <table>
+              <tr><td><span class="form-group"><label class="small" for="inputHeight">Height (cm)</label></td><td><input class="form-control py-1" id="inputHeight" type="number" readOnly placeholder=180 /></span></td></tr>
+              <tr><td><span class="form-group"><label class="small" for="inputWeight">Weight (kg)</label></td><td><input class="form-control py-1" id="inputWeight" type="number" readOnly placeholder=80 /></span></td></tr>
+                  </table></td>
+                </tr>
+            </table>
+            </div> 
         </div>
-  <div class="row justify-content-center">
-      <span class="form-group" ><input class="form-button py-2" id="inputPassword" type="submit" value="Submit Changes"  /></span>
-  </div>  
       </div>
     </div>
-    <!--
-    <div class="row justify-content-center">
-      <div class="card rounded-lg px-0 py-0">
-        <div class="card-header px-1 py-1">
-	  Thresholds
-	  <div class = "float-right mr-1"><a class="unlock thresholds" id="toggle_thresholds" onclick="toggle_lock_thresholds()">
-	      <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock" class="svg-inline--fa fa-lock fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-		<path class="path-icon" id = "path-locked-thresholds" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
-		<path class="path-icon transparent" id="path-unlocked-thresholds" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
-	    </svg>
-	    </a>
-	    </div>
-	</div>-->
         <div class="card-body px-1 py-1">
           <div>
           <form action="{{ url_for('data_handler') }}" method="post">
+            <table>
+              <tr><td>
+                <table>
+              <tr>
+                <td> <label class="small" for="inputVar1" >Buffer fill [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="pressure_air_supply" type="number" value="11" name="timeout_threshold"  onclick="show_easy_numpad(this, buffer_fill_controller);lock();" readOnly disabled/></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar2">Buffer flush [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="pressure_air_regulated" type="number" value=1 name="variable2"  /></span></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar3">Buffer loaded [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="pressure_o2_supply" type="number" value=1 name="variable3"  /></span></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar4">Buffer pre-fill [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="pressure_o2_regulated" type="number" value=1 name="variable4"  /></span></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar5">Buffer pre-inhale [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="pressure_buffer" type="number" value=1 name="variable4"  /></span></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar6">Buffer purge [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="pressure_inhale" type="number" value=1 name="variable4"  /></span></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar7">Inhale [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="pressure_patient" type="number" value=1 name="variable4"  /></span></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar8">Pause [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="readback_valve_air_in" type="number" value=1 name="variable4"  /></span></td>
+              </tr>
+              <tr>
+                <td><span class="form-group"><label class="small" for="inputVar9">Exhale [ms]</label></td>
+                  <td><input class="form-control py-1 input-editable" id="readback_valve_02_in" type="number" value=1 name="variable4"  /></span></td>
+              </tr>
+              <tr><td><span class="form-group"><label class="small" for="inputVar10">Exhale fill[ms]</label></td><td><input class="form-control py-1 input-editable" id="readback_valve_out" type="number" value=1 name="variable5"  /></span></td></tr>
 
-         <label class="small" for="inputVar1" >Buffer fill [ms]  </label>   <input class="form-control py-1" id="pressure_air_supply" type="submit" value="11" name="timeout_threshold"  onclick="changeThresholdAlert(this.name)" />
+            </table>
+          </td>
+          <td>
+            <table>
 
-          <span class="form-group"><label class="small" for="inputVar2">Buffer flush [ms]</label><input class="form-control py-1" id="pressure_air_regulated" type="number" value=1 name="variable2"  /></span>
-          <span class="form-group"><label class="small" for="inputVar3">Buffer loaded [ms]</label><input class="form-control py-1" id="pressure_o2_supply" type="number" value=1 name="variable3"  /></span>
-          <br>
-
-          <span class="form-group"><label class="small" for="inputVar4">Buffer pre-fill [ms]</label><input class="form-control py-1" id="pressure_o2_regulated" type="number" value=1 name="variable4"  /></span>
-          <span class="form-group"><label class="small" for="inputVar5">Buffer pre-inhale [ms]</label><input class="form-control py-1" id="pressure_buffer" type="number" value=1 name="variable4"  /></span>
-          <span class="form-group"><label class="small" for="inputVar6">Buffer purge [ms]</label><input class="form-control py-1" id="pressure_inhale" type="number" value=1 name="variable4"  /></span>
-          <br>
-          <span class="form-group"><label class="small" for="inputVar7">Inhale [ms]</label><input class="form-control py-1" id="pressure_patient" type="number" value=1 name="variable4"  /></span>
-          <span class="form-group"><label class="small" for="inputVar8">Pause [ms]</label><input class="form-control py-1" id="readback_valve_air_in" type="number" value=1 name="variable4"  /></span>
-          <span class="form-group"><label class="small" for="inputVar9">Exhale [ms]</label><input class="form-control py-1" id="readback_valve_02_in" type="number" value=1 name="variable4"  /></span>
-          <br>
-          <span class="form-group"><label class="small" for="inputVar10">Exhale fill[ms]</label><input class="form-control py-1" id="readback_valve_out" type="number" value=1 name="variable5"  /></span>
-          <span class="form-group"><label class="small" for="inputVar11">Vavle (Air)</label><input class="form-control py-1" id="readback_valve_scavenge" type="number" value=1 name="variable6"  /></span>
-          <span class="form-group"><label class="small" for="inputVar12">Valve (O2)</label><input class="form-control py-1" id="readback_valve_purge" type="number" value=1 name="variable6"  /></span>
-          <br>
-          <span class="form-group"><label class="small" for="inputVar13">Valve (Inhale) [%]</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-          <span class="form-group"><label class="small" for="inputVar13">Valve (Exhale) [%]</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-          <span class="form-group"><label class="small" for="inputVar13">Valve (Purge)</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-          <br>
-          <span class="form-group"><label class="small" for="inputVar13">PEEP [cmH2O]</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-          <span class="form-group"><label class="small" for="inputVar13">State</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-          <span class="form-group"><label class="small" for="inputVar13">RPM</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-          <br>
-          <span class="form-group"><label class="small" for="inputVar13">Inhale:Exhale</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-          <span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label><input class="form-control py-1" id="readback_mode" type="number" value=1 name="variable6"  /></span>
-
+          <tr><td><span class="form-group"><label class="small" for="inputVar11">Vavle (Air)</label></td><td><input class="form-control py-1 input-editable" id="readback_valve_scavenge" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar12">Valve (O2)</label></td><td><input class="form-control py-1 input-editable" id="readback_valve_purge" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Inhale) [%]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Exhale) [%]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Purge)</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">PEEP [cmH2O]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">State</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">RPM</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Inhale:Exhale</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+            </table></td>
+          </tr>
+          </table>
           </div>
         </div>
     <div class="row justify-content-center">
@@ -83,7 +97,7 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block body_scripts %}
 <script type=text/javascript>
 
 function changeThresholdAlert(element){
@@ -112,78 +126,40 @@ function changeValue(element){
 	  }
 
 
-  /*
-  function toggle_lock_personal() {
-  setTimeout(function(){
-  if ( document.getElementById("inputName").readOnly == true){
-  document.getElementById("inputName").readOnly = false;
-  document.getElementById("inputAge").readOnly = false;
-  document.getElementById("inputWeight").readOnly = false;
-  document.getElementById("inputHeight").readOnly = false;
-  var el = document.getElementById("path-unlocked-details");
-  el.classList.remove("transparent");
-  var el2 = document.getElementById("path-locked-details");
-  el2.classList.add("transparent");
-
+  class input_controller{
+	constructor(name, element) {
+    this.name = name;
+	this.element = element;
   }
-  else {
-  document.getElementById("inputName").readOnly   = true;
-  document.getElementById("inputAge").readOnly    = true;
-  document.getElementById("inputWeight").readOnly = true;
-  document.getElementById("inputHeight").readOnly = true;
-  var el = document.getElementById("path-unlocked-details");
-  el.classList.add("transparent");
-  var el2 = document.getElementById("path-locked-details");
-  el2.classList.remove("transparent");
-
+  getName(){ return this.name;}
+  getValue() {
+    return this.element.value;
   }
-  },500)}
-
-  
-  function toggle_lock_thresholds() {
-  setTimeout(function(){
-  if ( document.getElementById("pressure_air_supply").readOnly == true){
-  document.getElementById("pressure_air_supply").readOnly = false;
-  document.getElementById("pressure_air_regulated").readOnly = false;
-  document.getElementById("pressure_o2_supply").readOnly = false;
-  document.getElementById("pressure_o2_regulated").readOnly = false;
-  document.getElementById("pressure_buffer").readOnly = false;
-  document.getElementById("pressure_inhale").readOnly = false;
-  document.getElementById("pressure_patient").readOnly = false;
-  document.getElementById("readback_valve_air_in").readOnly = false;
-  document.getElementById("readback_valve_02_in").readOnly = false;
-  document.getElementById("readback_valve_out").readOnly = false;
-  document.getElementById("readback_valve_scavenge").readOnly = false;
-  document.getElementById("readback_valve_purge").readOnly = false;
-  document.getElementById("readback_mode").readOnly = false;
-  var el = document.getElementById("path-unlocked-thresholds");
-  el.classList.remove("transparent");
-  var el2 = document.getElementById("path-locked-thresholds");
-  el2.classList.add("transparent");
-  
+  setValue(val){
+    //e.g.
+    window.createNotification({
+			closeOnClick: 1,
+			displayCloseButton: 0,
+			positionClass: "nfc-bottom-right",
+			showDuration: false,
+			theme: "info"
+		})({
+			title: "Updated settings",
+			message: "Setting updated from " + this.element.value + " to " + val + " for " + this.name
+	  });
+	  this.element.value = val;
   }
-  else {
-  document.getElementById("pressure_air_supply").readOnly = true;
-  document.getElementById("pressure_air_regulated").readOnly = true;
-  document.getElementById("pressure_o2_supply").readOnly = true;
-  document.getElementById("pressure_o2_regulated").readOnly = true;
-  document.getElementById("pressure_buffer").readOnly = true;
-  document.getElementById("pressure_inhale").readOnly = true;
-  document.getElementById("pressure_patient").readOnly = true;
-  document.getElementById("readback_valve_air_in").readOnly = true;
-  document.getElementById("readback_valve_02_in").readOnly = true;
-  document.getElementById("readback_valve_out").readOnly = true;
-  document.getElementById("readback_valve_scavenge").readOnly = true;
-  document.getElementById("readback_valve_purge").readOnly = true;
-  document.getElementById("readback_mode").readOnly = true;
-  var el = document.getElementById("path-unlocked-thresholds");
-  el.classList.add("transparent");
-  var el2 = document.getElementById("path-locked-thresholds");
-  el2.classList.remove("transparent");
-
+  getMin(){
+	  if (this.element.min) return this.element.min;
+	  else return null;
   }
-  },500)}
-  */
+  getMax(){
+	  if (this.element.max) return this.element.max;
+	  else return null;
+  }
+}
+
+buffer_fill_controller = new input_controller("buffer_fill", document.getElementById("pressure_air_supply"));
 
 </script>
 
