--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -66,16 +66,16 @@
 		<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
               </div>
 			  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div> -->
-			  <div class = "main-chart-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fio"></canvas></div>
+			  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fio"></canvas></div>
 	  </div>
 
 	
 	  <div class="card-input-reading">
 		<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-	  <a class="small text-dark col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O</small> </a><br>
+	  <a class="small text-dark col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O]</small> </a>
 		</div>
 		<!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div> -->
-		<div class = "main-chart-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_p_plateau"></canvas></div>
+		<div class = "main-gauge-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_p_plateau"></canvas></div>
 	</div>
 
 	    <div class="card-reading">
