--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -80,6 +80,9 @@
               <tr><td><span class="form-group"><label class="small" for="inputVar10">Exhale fill[ms]</label></td>
               <td><input class="form-control py-1 input-editable" id="exhale_fill" type="number" value="1"   onclick="show_easy_numpad(this, exhale_fill_controller);lock();"  readOnly disabled/></td>
 
+              <tr><td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td>
+                <td><input class="form-control py-1 input-editable" id="calibration" type="number" value="1"   onclick="show_easy_numpad(this, calibration_controller);lock();"  readOnly disabled/></td>
+    
 
             </table>
           </td>
@@ -87,34 +90,31 @@
             <table>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar11">Valve (Air)</label></td>
-            <td><input class="form-control py-1 input-editable" id="valve_air" type="number" value="1"   onclick="show_easy_numpad(this, valve_air_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="valve_air" type="number" value="1"   onclick="show_easy_numpad(this, valve_air_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar12">Valve (O2)</label></td>
-            <td><input class="form-control py-1 input-editable" id="valve_o2" type="number" value="1"   onclick="show_easy_numpad(this, valve_02_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="valve_o2" type="number" value="1"   onclick="show_easy_numpad(this, valve_02_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Inhale) [%]</label></td>
-            <td><input class="form-control py-1 input-editable" id="valve_inhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_inhale_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="valve_inhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_inhale_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Exhale) [%]</label></td>
-            <td><input class="form-control py-1 input-editable" id="valve_exhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_exhale_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="valve_exhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_exhale_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Purge)</label></td>
-            <td><input class="form-control py-1 input-editable" id="valve_exhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_purge_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="valve_exhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_purge_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar13">PEEP [cmH2O]</label></td>
-            <td><input class="form-control py-1 input-editable" id="peep" type="number" value="1"   onclick="show_easy_numpad(this, purge_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="peep" type="number" value="1"   onclick="show_easy_numpad(this, purge_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar13">State</label></td>
-            <td><input class="form-control py-1 input-editable" id="state" type="number" value="1"   onclick="show_easy_numpad(this, state_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="state" type="number" value="1"   onclick="show_easy_numpad(this, state_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar13">RPM</label></td>
-            <td><input class="form-control py-1 input-editable" id="rpm" type="number" value="1"   onclick="show_easy_numpad(this, rpm_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="rpm" type="number" value="1"   onclick="show_easy_numpad(this, rpm_controller);lock();"  readOnly disabled/></td>
 
           <tr><td><span class="form-group"><label class="small" for="inputVar13">Inhale:Exhale</label></td>
-            <td><input class="form-control py-1 input-editable" id="inhale_exhale" type="number" value="1"   onclick="show_easy_numpad(this, inhale_exhale_controller);lock();"  readOnly disabled/></td>
-
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td>
-            <td><input class="form-control py-1 input-editable" id="calibration" type="number" value="1"   onclick="show_easy_numpad(this, calibration_controller);lock();"  readOnly disabled/></td>
+            <td><input class="form-control py-1" id="inhale_exhale" type="number" value="1"   onclick="show_easy_numpad(this, inhale_exhale_controller);lock();"  readOnly disabled/></td>
 
             </table></td>
           </tr>
